--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,9 @@ dependencies:
   sensors_plus: ^6.1.0
   permission_handler: ^11.3.1
   web_socket_channel: ^3.0.1
-  wakelock: ^0.6.2
   flutter_haptic: ^0.0.3
+  wakelock_plus: ^1.2.8
+  
 
 dev_dependencies:
   flutter_test:
