--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   permission_handler: ^11.3.1
   web_socket_channel: ^3.0.1
   wakelock_plus: ^1.2.8
+  vector_math: ^2.1.4
   
 
 dev_dependencies:
